@@ -18,19 +18,30 @@ if not userids:
     return view.tab_access(message_type="error", message=_("No user(s) selected."))
 
 model = request.model
-#assigned = []
+assigned = []
+failed = []
 for userid in userids:
     try:
         model.sec_assign(userid, assign_role)
     except:
-        # No feedback, can't have the exception with a lot of bad things.
-        # Stay silent until we got a better framework.
-        pass
-    #assigned.append((userid, assign_role))
+        failed.append(userid)
+    else:
+        assigned.append(userid)
 
-#return view.tab_access(
-#    message_type="feedback",
-#    message="Role(s) assigned") # for %s" % view.quotify_list_ext(assigned))
+if assigned:
+    if failed:
+        return view.tab_access(
+            message_type="error",
+            message=_("Role(s) assigned for ${good_users} but failed to assign for ${bad_users}.",
+                      mapping=dict(good_users=view.quotify_list(assigned),
+                                   bad_users=view.quotify_list(failed))))
 
-# FIXME: do we need feedback?
-request.RESPONSE.redirect('%s/edit/tab_access' % model.absolute_url())
+    return view.tab_access(
+        message_type="feedback",
+        message=_("Role(s) assigned for ${users}.",
+                  mapping=dict(users=view.quotify_list(assigned))))
+
+return view.tab_access(
+    message_type="error",
+    message=_("No role have been assigned for ${users}.",
+              mapping=dict(users=view.quotify_list(failed))))
